--- a/wildflat/wildflat/index.html
+++ b/wildflat/wildflat/index.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<!----start-logo---->
 					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" title="wildflat" /> </a><!--CAMINO SIN LIMITES-->
+						<a href="index.html"><img src="images/logo.png" width="100" title="wildflat" /> </a><!--CAMINO SIN LIMITES-->
 					</div>
 					<!----//End-logo---->
 				</div>
@@ -310,16 +310,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="about-grids">
 						<div class="about-grid">
-							<h3>TEAM</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet scelerisque orci. Donec molestie magna tincidunt lectus ornare, gravida molestie.</p>
+							<h3>PAGINA</h3>
+							<p>Esta es una pagina web creada para ayudar a las personas con alguna discapacidad a encontrar trabajo en alguna empresa tomando en cuenta sus habilidades y limitaciones. </p>
 						</div>
 						<div class="about-grid">
-							<h3>CLIENTS</h3>
-							<p>Vivamus iaculis urna id dictum tempor. Praesent gravida ante nec imperdiet dignissim. Donec lacinia eget mi eu convallis. lacinia laoreet nulla.</p>
+							<h3>SOLICITANTES</h3>
+							<p>Los solicitantes de empleo podran ver las vacantes que se encuentran en las empresas y podran enviar solicitudes con sus datos para ser candidatos en la empresa. </p>
 						</div>
 						<div class="about-grid">
-							<h3>WORK</h3>
-							<p>Donec suscipit dolor lectus, in eleifend nunc blandit et. Mauris quis lacus eu est fringilla condimentum vitae vel purus. Nunc cursus nisi nec adipiscing ornare. </p>
+							<h3>EMPRESAS</h3>
+							<p>Podran ver a los candidatos que han enviado sus datos a la empresa y por el puesto que quieren, en dado caso de no ser apto para el puesto se podra redirigir a otro puesto dentro de esa empresa. </p>
 						</div>
 						<div class="clear"> </div>
 					</div>
@@ -332,7 +332,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="wrap">
 					<div class="head">
 						<span> </span>
-						<h3>WildFlat Services</h3>
+						<h3>SERVICIOS</h3>
 					</div>
 					<div class="services-grids">
 						<div class="services-grid">
@@ -340,8 +340,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<span class="s-icon1"> </span>
 							</div>
 							<div class="services-grid-right">
-								<h4>WEB DESIGN</h4>
-								<p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can not only work but also have fun and learn.</p>
+								<h4>INFORMACION</h4>
+								<p>Brindamos informacion sobre las discapacidades que pueden haber, de que tratan, habilidades y limitaciones que tienen en dado caso de que la empresa no este informada sobre esto. </p>
 							</div>
 						</div>
 						<div class="services-grid">
@@ -355,20 +355,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						<div class="services-grid">
 							<div class="services-grid-left">
-								<span class="s-icon3"> </span>
-							</div>
-							<div class="services-grid-right">
-								<h4>UI design</h4>
-								<p>Quisque non ornare nisi. Nam vel nulla euismod ipsum euismod faucibus ac vel magna. Integer hendrerit tellus eget lorem interdum ultrices. Aliquam gravida luctus lacus, in adipiscing massa egestas eu. Proin porta non lectus ac pellentesque. </p>
-							</div>
-						</div>
-						<div class="services-grid">
-							<div class="services-grid-left">
 								<span class="s-icon4"> </span>
 							</div>
 							<div class="services-grid-right">
-								<h4>Video</h4>
-								<p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can not only work but also have fun and learn.</p>
+								<h4>CAPACITACIONES</h4>
+								<p>Ofrecemos enlaces con capacitaciones para los nuevos trabajadores que ingresen a la empresa y puedan entender el trabajo en el que se les contrato. </p>
 							</div>
 						</div>
 						<div class="clear"> </div>
@@ -502,7 +493,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="footer">
 				<div class="wrap"> 
 				<div class="footer-left">
-					<h2>FANKS FOR WATCHING, <span>I hope you enjoyed it</span></h2>
+					<h2>GRACIAS POR LEER, <span> Esperamos haber sido de ayuda</span></h2>
 				</div>
 				<div class="footer-right">
 					<ul>
