--- a/wildflat/wildflat/index.html
+++ b/wildflat/wildflat/index.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="header-left">
 					<!----start-logo---->
 					<div class="logo">
-						<a href="index.html"><img src="images/logo.png" title="wildflat" /> </a><!--CAMINO SIN LIMITES-->
+						<a href="index.html"><img src="images/logo.png" width="100" title="wildflat" /> </a><!--CAMINO SIN LIMITES-->
 					</div>
 					<!----//End-logo---->
 				</div>
