--- a/wildflat/wildflat/index.html
+++ b/wildflat/wildflat/index.html
@@ -310,16 +310,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 					<div class="about-grids">
 						<div class="about-grid">
-							<h3>TEAM</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet scelerisque orci. Donec molestie magna tincidunt lectus ornare, gravida molestie.</p>
+							<h3>PAGINA</h3>
+							<p>Esta es una pagina web creada para ayudar a las personas con alguna discapacidad a encontrar trabajo en alguna empresa tomando en cuenta sus habilidades y limitaciones. </p>
 						</div>
 						<div class="about-grid">
-							<h3>CLIENTS</h3>
-							<p>Vivamus iaculis urna id dictum tempor. Praesent gravida ante nec imperdiet dignissim. Donec lacinia eget mi eu convallis. lacinia laoreet nulla.</p>
+							<h3>SOLICITANTES</h3>
+							<p>Los solicitantes de empleo podran ver las vacantes que se encuentran en las empresas y podran enviar solicitudes con sus datos para ser candidatos en la empresa. </p>
 						</div>
 						<div class="about-grid">
-							<h3>WORK</h3>
-							<p>Donec suscipit dolor lectus, in eleifend nunc blandit et. Mauris quis lacus eu est fringilla condimentum vitae vel purus. Nunc cursus nisi nec adipiscing ornare. </p>
+							<h3>EMPRESAS</h3>
+							<p>Podran ver a los candidatos que han enviado sus datos a la empresa y por el puesto que quieren, en dado caso de no ser apto para el puesto se podra redirigir a otro puesto dentro de esa empresa. </p>
 						</div>
 						<div class="clear"> </div>
 					</div>
@@ -332,7 +332,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="wrap">
 					<div class="head">
 						<span> </span>
-						<h3>WildFlat Services</h3>
+						<h3>SERVICIOS</h3>
 					</div>
 					<div class="services-grids">
 						<div class="services-grid">
