--- a/wildflat/wildflat/index.html
+++ b/wildflat/wildflat/index.html
@@ -340,8 +340,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<span class="s-icon1"> </span>
 							</div>
 							<div class="services-grid-right">
-								<h4>WEB DESIGN</h4>
-								<p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can not only work but also have fun and learn.</p>
+								<h4>INFORMACION</h4>
+								<p>Brindamos informacion sobre las discapacidades que pueden haber, de que tratan, habilidades y limitaciones que tienen en dado caso de que la empresa no este informada sobre esto. </p>
 							</div>
 						</div>
 						<div class="services-grid">
@@ -355,20 +355,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						<div class="services-grid">
 							<div class="services-grid-left">
-								<span class="s-icon3"> </span>
-							</div>
-							<div class="services-grid-right">
-								<h4>UI design</h4>
-								<p>Quisque non ornare nisi. Nam vel nulla euismod ipsum euismod faucibus ac vel magna. Integer hendrerit tellus eget lorem interdum ultrices. Aliquam gravida luctus lacus, in adipiscing massa egestas eu. Proin porta non lectus ac pellentesque. </p>
-							</div>
-						</div>
-						<div class="services-grid">
-							<div class="services-grid-left">
 								<span class="s-icon4"> </span>
 							</div>
 							<div class="services-grid-right">
-								<h4>Video</h4>
-								<p>Bacon ipsum dolor sit amet shank tri-tip pig, short loin pork belly boudin ground round flank sirloin bresaola filet mignon sausage beef ribs kielbasa. flow freely, we've created a studio where we can not only work but also have fun and learn.</p>
+								<h4>CAPACITACIONES</h4>
+								<p>Ofrecemos enlaces con capacitaciones para los nuevos trabajadores que ingresen a la empresa y puedan entender el trabajo en el que se les contrato. </p>
 							</div>
 						</div>
 						<div class="clear"> </div>
